force-app/main/sacTree/objects/DynamicPicklistLevel__mdt/DynamicPicklistLevel__mdt.object-meta.xml
<CustomObject>
    <label>Dynamic Picklist Level</label>
    <pluralLabel>Dynamic Picklist Levels</pluralLabel>
</CustomObject>