force-app/main/sacTree/objects/DynamicPicklistLevel__mdt/fields/DynamicPicklistSObject__c.field-meta.xml
<CustomField>
    <fullName>DynamicPicklistSObject__c</fullName>
    <label>Dynamic Picklist sObject</label>
    <referenceTo>DynamicPicklist__mdt</referenceTo>
    <relationshipLabel>Dynamic Picklist Levels</relationshipLabel>
    <relationshipName>DynamicPicklistLevels</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>