force-app/main/sacTree/objects/DynamicPicklistLevel__mdt/fields/FieldMapping__c.field-meta.xml
<CustomField>
    <fullName>FieldMapping__c</fullName>
    <label>Field Mapping</label>
    <length>100</length>
    <type>Text</type>
</CustomField>