force-app/main/sacTree/objects/DynamicPicklistLevel__mdt/fields/LevelOrder__c.field-meta.xml
<CustomField>
    <fullName>LevelOrder__c</fullName>
    <label>Level Order</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>