force-app/main/sacTree/objects/DynamicPicklistLevel__mdt/listViews/AllCustom.listView-meta.xml
<ListView>
    <fullName>AllCustom</fullName>
    <columns>DynamicPicklistSObject__c</columns>
    <columns>LevelOrder__c</columns>
    <columns>FieldMapping__c</columns>
    <columns>DeveloperName</columns>
    <columns>MasterLabel</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>